--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             </div>
         </div>
     </div>
-    <audio id="bgmMusic" src="/music/dongluchoaxa.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>  
+    <audio src="/music/dongluchoaxa.mp3"></audio>
+    <!-- <audio id="bgmMusic" src="/music/dongluchoaxa.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>   -->
 </body>
+<script>
+    window.addEventListener("DOMContentLoaded", event => {
+  const audio = document.querySelector("audio");
+  audio.volume = 0.2;
+  audio.play();
+});
+</script>
 </html>
