--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
             </div>
         </div>
     </div>
-    <audio src="/music/dongluchoaxa.mp3"></audio>
     <!-- <audio id="bgmMusic" src="/music/dongluchoaxa.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>   -->
+    <audio controls autoplay loop hidden>
+        <source src="/music/dongluchoaxa.mp3" type="audio/mpeg">
+    </audio>
 </body>
-<script>
-    window.addEventListener("DOMContentLoaded", event => {
-  const audio = document.querySelector("audio");
-  audio.volume = 0.2;
-  audio.play();
-});
-</script>
+
 </html>
