--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="/image/traitim.jpg" type="image/x-icon">
 </head>
 <body>
+    <audio autoplay="autoplay">
+        <source src="/music/dongluchoaxa.mp3" type="audio/mp3" />
+    </audio>  
     <div class="loading">
         <div class="boxHeartImg">
             <div class="heartItem item1">
@@ -42,9 +45,9 @@
         </div>
     </div>
     <!-- <audio id="bgmMusic" src="/music/dongluchoaxa.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>   -->
-    <audio controls autoplay loop hidden>
+    <!-- <audio controls autoplay loop hidden>
         <source src="/music/dongluchoaxa.mp3" type="audio/mpeg">
-    </audio>
+    </audio> -->
 </body>
 
 </html>
