--- a/love/love.html
+++ b/love/love.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <audio autoplay="autoplay">
+        <source src="/music/dongluchoaxa.mp3" type="audio/mp3" />
+    </audio> 
     <div class="wrapper">
         <!-- <img src="../thư love.png" alt=""> -->
         <div class="formInput">
@@ -125,9 +128,9 @@
     </div>
     <!-- <audio id="bgmMusic" src="/music/dongluchoaxa.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio> -->
     <!-- <audio src="/music/dongluchoaxa.mp3"></audio> -->
-    <audio controls autoplay loop hidden>
+    <!-- <audio controls autoplay loop hidden>
         <source src="/music/dongluchoaxa.mp3" type="audio/mpeg">
-    </audio>
+    </audio> -->
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <script>
